tests/paczka1/fuzzy1/17892872.err
Error in line 4: tLP7G1Om S662 46,7
Error in line 17: OFxWVWpzq7d S662 126,7
Error in line 14: JA6i S782 33,5
Error in line 30: JA6i S534 87,0
